Refatoração Aluno e Materia do pacote Service e Resources para usar identificador como query parameter.
Took 2 hours 10 minutes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ quarkus.datasource.username=postgres
 quarkus.datasource.password=postgres
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/schooldb
 # Configurações de JPA
-quarkus.hibernate-orm.database.generation=drop-and-create
+# drop-and-create: deleta o banco e cria novamente
+quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
 
 # OpenAPI e Swagger UI
